--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -11,7 +11,9 @@
     <ListView
         android:id="@+id/color_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="true"
+        >
 
     </ListView>
 
