--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -10,7 +10,9 @@
     <ListView
         android:id="@+id/numbers_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="true"
+        >
 
     </ListView>
 
